# 3DEditorByCpp

./: .gitignore  CMakeLists.txt  Makefile  main.cpp
inc/: pch.h  render.h  scene.h  ui.h
inc/geometry/: mesh.h  scene.h  vertex.h
inc/scene/: mesh.h  vertex.h
src/: main.cpp  render.cpp  scene.cpp  ui.cpp
